--- a/index.html
+++ b/index.html
@@ -9,26 +9,9 @@
 </head>
 <body>
 <div class="main">
-    <div class="header">
-        <h4>升级云存储空间</h4>
-    </div>
     <div class="content">
-        <canvas id="my-canvas"></canvas>
-        <div class="gesture"></div>
-        <h5 class="info">请设置手势密码</h5>
-    </div>
-    <div class="footer">
-        <form onchange="handleRadioChange(this)">
-            <label for="set">设置密码</label>
-            <input type="radio" name="verify" id="set" value="set" checked="checked"/>
-            <!--name设置成一样才认为是属于一个form，radio才会互斥-->
-            <br/><br/>
-            <label for="verify">输入密码</label>
-            <input type="radio" name="verify" id="verify" value="verify"/>
-        </form>
     </div>
 </div>
-<!--<script src="js/index.js"></script>-->
-<script src="build/index.js"></script>
+<script src="js/task_list.js"></script>
 </body>
 </html>
