--- a/index.html
+++ b/index.html
@@ -10,8 +10,14 @@
 <body>
 <div class="main">
     <div class="content">
+        <div class="task-create hide"></div>
+        <div class="task-list"></div>
     </div>
 </div>
+<script src="js/app.js"></script>
+<script src="js/model.js"></script>
+<script src="js/touch.js"></script>
+<script src="js/task.js"></script>
 <script src="js/task_list.js"></script>
 </body>
 </html>
