--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     </div>
 </div>
 <script src="js/app.js"></script>
+<script src="js/config.js"></script>
 <script src="js/model.js"></script>
 <script src="js/touch.js"></script>
 <script src="js/task.js"></script>
