--- a/index.html
+++ b/index.html
@@ -10,8 +10,9 @@
 <body>
 <div class="main">
     <div class="content">
-        <div class="task-create hide"></div>
+        <div class="task-create"></div>
         <div class="task-list"></div>
+        <div class="mask hide"></div>
     </div>
 </div>
 <script src="js/app.js"></script>
