transition被记住的bug，刚插入元素不能设置transition，使用requestAnimationFrame

--- a/index.html
+++ b/index.html
@@ -10,10 +10,13 @@
 <body>
 <div class="main">
     <div class="content">
+        <div class="top-message">
+            by heben
+        </div>
         <div class="task-create"></div>
         <div class="task-list"></div>
-        <div class="mask hide"></div>
     </div>
+    <!--<div class="mask hide"></div> -->   <!--这里涉及到层级上下文,transform会创建层级上下文,opacity<1也会创建层级上下文-->
 </div>
 <script src="js/app.js"></script>
 <script src="js/config.js"></script>
