使用touch模拟拖拽

--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
         </div>
         <div class="task-create"></div>
         <div class="task-list"></div>
+        <div class="item-list"></div>
+        <div class="mask hide">
     </div>
     <!--<div class="mask hide"></div> -->   <!--这里涉及到层级上下文,transform会创建层级上下文,opacity<1也会创建层级上下文-->
 </div>
