--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport"
           content="initial-scale=1.0,maximum-scale=1.0,minimum-scale=1.0,user-scalable=no">
-    <title>升级云存储空间</title>
+    <title>H5 Clear</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
